--- a/styles/css/project.css
+++ b/styles/css/project.css
@@ -99,8 +99,9 @@ body {
 }
 
 #nav {
-  padding-top: 65px;
+  padding: 65px 0;
   background-color: transparent;
+  min-height: 500px;
 }
 
 #nav li a p {
@@ -210,7 +211,6 @@ section:last-child {
 .application {
   padding: 50px 0;
   background-color: #ed9f80;
-  margin-top: 50px;
 }
 
 #overview {
@@ -257,7 +257,6 @@ section:last-child {
 }
 
 #brand-video {
-  display: none;
   height: 600px;
   background-color: #3e3e46;
   color: #daae9c;
@@ -455,4 +454,168 @@ section:last-child {
   font-style: italic;
   font-family: "Work Sans", sans-serif;
   padding-bottom: 15px;
+}
+#branding-research #type-color {
+  border-bottom: 1px solid #1d1d21;
+  padding: 30px 50px;
+  min-height: 500px;
+}
+#branding-research #type-color h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-bottom: 20px;
+}
+#branding-research #type-color img {
+  background-color: #fff;
+  width: 500px;
+  padding: 20px;
+}
+#branding-research #mockups {
+  padding: 30px 50px;
+}
+#branding-research #mockups h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+}
+#branding-research #mockups .img-wrapper {
+  margin: 0 auto;
+  padding: 20px 0;
+}
+#branding-research #mockups .img-wrapper a {
+  display: inline-block;
+}
+#branding-research #mockups .img-wrapper a img {
+  width: 250px;
+  padding: 5px 5px 25px 0;
+  display: inline-block;
+}
+#branding-research #mockups .img-wrapper p {
+  font-size: 1.1em;
+  font-style: italic;
+  padding: 25px 0;
+  font-family: "Work Sans", sans-serif;
+  display: inline;
+}
+
+#web-design {
+  height: auto;
+  background-color: #3e3e46;
+  color: #daae9c;
+}
+#web-design .pad-box {
+  margin: 0 auto;
+  padding: 50px;
+}
+#web-design .pad-box h2 {
+  padding-bottom: 20px;
+  font-family: "adamnormal", sans-serif;
+  text-transform: uppercase;
+  font-weight: bolder;
+  border-bottom: 2px solid #daae9c;
+}
+#web-design .pad-box #evolution {
+  border-bottom: 1px solid #daae9c;
+}
+#web-design .pad-box #evolution h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-top: 25px;
+}
+#web-design .pad-box #evolution .img-wrapper {
+  margin: 0 auto;
+  padding: 10px 0 30px 0;
+}
+#web-design .pad-box #evolution .img-wrapper a {
+  display: inline-block;
+}
+#web-design .pad-box #evolution .img-wrapper a img {
+  width: 180px;
+  padding: 5px 5px 5px 0;
+}
+#web-design .pad-box #evolution .img-wrapper p {
+  width: 600px;
+  padding: 15px 0;
+  font-family: "Work Sans", sans-serif;
+}
+#web-design .pad-box #inspiration2 {
+  border-bottom: 1px solid #daae9c;
+}
+#web-design .pad-box #inspiration2 h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-top: 25px;
+}
+#web-design .pad-box #inspiration2 .img-wrapper {
+  margin: 0 auto;
+  padding: 10px 0 30px 0;
+}
+#web-design .pad-box #inspiration2 .img-wrapper a {
+  display: inline-block;
+}
+#web-design .pad-box #inspiration2 .img-wrapper a img {
+  width: 250px;
+  padding: 5px 5px 5px 0;
+}
+#web-design .pad-box #inspiration2 .img-wrapper p {
+  width: 600px;
+  padding: 15px 0;
+  font-family: "Work Sans", sans-serif;
+}
+#web-design .pad-box #ia {
+  border-bottom: 1px solid #daae9c;
+}
+#web-design .pad-box #ia h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-top: 25px;
+}
+#web-design .pad-box #ia .img-wrapper {
+  margin: 0 auto;
+  padding: 10px 0 30px 0;
+}
+#web-design .pad-box #ia .img-wrapper a {
+  display: inline-block;
+}
+#web-design .pad-box #ia .img-wrapper a img {
+  max-width: 100%;
+  width: 650px;
+  padding: 15px 5px 5px 0;
+}
+#web-design .pad-box #wireframes {
+  border-bottom: 1px solid #daae9c;
+}
+#web-design .pad-box #wireframes h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-top: 25px;
+}
+#web-design .pad-box #wireframes .img-wrapper {
+  margin: 0 auto;
+  padding: 10px 0 30px 0;
+}
+#web-design .pad-box #wireframes .img-wrapper a {
+  display: inline-block;
+}
+#web-design .pad-box #wireframes .img-wrapper a img {
+  max-width: 100%;
+  width: 650px;
+  padding: 5px 5px 5px 0;
+}
+#web-design .pad-box #high-fid {
+  min-height: 600px;
+}
+#web-design .pad-box #high-fid h3 {
+  font-family: "bellotaregular", sans-serif;
+  font-weight: bolder;
+  padding-top: 25px;
+}
+#web-design .pad-box #high-fid .img-wrapper {
+  margin: 0 auto;
+  padding: 10px 0 30px 0;
+  display: inline-block;
+}
+#web-design .pad-box #high-fid .img-wrapper img {
+  max-width: 100%;
+  width: 650px;
+  padding: 5px 5px 5px 0;
 }
